change to padding on smaller screens to stop double click ads from being clipped

--- a/grunt/DEV/app/global/sass-globals/mixins/_core.scss
+++ b/grunt/DEV/app/global/sass-globals/mixins/_core.scss
@@ -26,7 +26,7 @@
 			padding:0 20px;
 
 			@media screen and (max-width: $mobile) {
-				padding:0 15px;				
+				padding:0 8px;				
 			}
 
 			&.relative{
